# openclaw-mission-control

./: .env.example  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  compose.yml  install.sh
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/versions/: 4b2a5e2dbb6e_rename_gateway_config_to_gateway.py  939a1d2dc607_init.py  c1c8b3b9f4d1_add_gateway_skyll_and_agent_templates.py
backend/app/: main.py
backend/app/api/: activity.py  agent.py  agents.py  board_group_memory.py  board_groups.py  board_onboarding.py  boards.py  deps.py  gateway.py  gateways.py  organizations.py  queryset.py  souls_directory.py  tasks.py
backend/app/core/: auth.py  config.py
backend/app/db/: crud.py  queryset.py  session.py  sqlmodel_exec.py
backend/app/integrations/: openclaw_gateway.py
backend/app/models/: __init__.py  agents.py  gateways.py
backend/app/queries/: organizations.py
backend/app/schemas/: __init__.py  agents.py  boards.py  gateway_api.py  gateways.py  souls_directory.py
backend/migrations/: env.py
backend/templates/: AGENTS.md  HEARTBEAT_AGENT.md  HEARTBEAT_LEAD.md  LEAD_PLAYBOOK.md  MAIN_AGENTS.md  MAIN_HEARTBEAT.md  MAIN_TOOLS.md  README.md  TOOLS.md
backend/tests/: test_agent_provisioning_utils.py  test_board_group_assignment_notifications.py  test_board_groups_delete.py  test_boards_delete.py  test_gateway_resolver.py  test_gateway_rpc_connect_scopes.py  test_gateway_version_compat.py  test_openapi_agent_role_tags.py  test_organizations_delete_api.py  test_organizations_member_remove_api.py  test_organizations_service.py  test_request_id_middleware.py  test_souls_directory.py  test_task_agent_permissions.py  test_task_dependencies.py  test_template_size_budget.py
(+52 files in other folders)
